Bug 409796 - "No pictures shown in saved file (file name and folder name, containing that file, is in cyrillic)" [p=lolkaantimat@gmail.com (Evgeniy Ivanov [powerfox]) r+sr=biesi a1.9=beltzner]